--- a/.github/workflows/batch.yml
+++ b/.github/workflows/batch.yml
@@ -22,4 +22,4 @@ jobs:
         # 여기서 부터 수정해야함
         run: ./gradlew clean :build -x test
       - name: Run batch
-        run: java -jar -Dspring.batch.job.name=tickerSlackJob .build/libs/crypto-automation-0.0.1-SNAPSHOT-plain.jar market=KRW-BTC
+        run: java -jar -Dspring.batch.job.name=tickerSlackJob .build/libs/crypto-automation-0.0.1-SNAPSHOT.jar market=KRW-BTC
